--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
           package="com.louis.naturalnet"
 >
 
-    <uses-sdk android:minSdkVersion="22" android:maxSdkVersion="27"/>
+    <uses-sdk android:maxSdkVersion="27"/>
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
