--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <!-- Investigate ACCESS_NETWORK_STATE (and other permissions) in Oppnet code -->
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
@@ -39,6 +42,16 @@
         </activity>
 
         <service android:enabled="true" android:name="com.louis.naturalnet.signal.LocationService" />
+
+        <receiver
+                android:name=".bluetooth.BTScanningAlarm"
+                android:enabled="true" >
+        </receiver>
+
+        <receiver
+                android:name="MainActivity$BTServiceBroadcastReceiver"
+                android:enabled="true" >
+        </receiver>
 
     </application>
 
