--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-sdk android:maxSdkVersion="27"/>
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -49,7 +50,7 @@
         </receiver>
 
         <receiver
-                android:name="MainActivity$BTServiceBroadcastReceiver"
+                android:name=".bluetooth.BTManager$BTServiceBroadcastReceiver"
                 android:enabled="true" >
         </receiver>
 
